hlvm/test/invalid/emptyfunc.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/invalid/emptyfunc.hlx">
  <bundle id="emptyfunc">
    <signature id="ftype" result="u32"></signature>
    <function id="two" type="ftype"/>
  </bundle>
</hlvm>
